[package]
name = "trait_forge"
version = "0.1.0"
edition = "2021"
authors = ["Wisdom Abioye <wisdomabioye@gmail.com>"]
description = "Traits folder to json"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22.1"
clap = {version = "4.5.38", features = ["derive"]}
mime_guess = "2.0.5"
walkdir = "2.5.0"
js-sys = "0.3.77"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
